--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
         <h1>鹿児島県へようこそ</h1>
     </header>
     <nav>
-        <a href="#tourist">観光スポット</a>
-        <a href="#restaurants">おすすめの飲食店</a>
-        <a href="#history">鹿児島の歴史</a>
+        <a href="tourist.html">観光スポット</a>
+        <a href="restaurant.html">おすすめの飲食店</a>
+        <a href="history.html">鹿児島の歴史</a>
     </nav>
     <div class="content">
         <section id="tourist">
